[gd_scene load_steps=2 format=3 uid="uid://ovhge4jm6ich"]

[ext_resource type="Script" path="res://menus/ide/output.gd" id="1_0gxau"]

[node name="Output" type="HBoxContainer"]
script = ExtResource("1_0gxau")

[node name="Delete" type="Button" parent="."]
layout_mode = 2
text = "X"

[node name="TypeSelection" type="OptionButton" parent="."]
layout_mode = 2
size_flags_horizontal = 3
item_count = 10
selected = 0
popup/item_0/text = "null"
popup/item_0/id = 0
popup/item_1/text = "bool"
popup/item_1/id = 1
popup/item_2/text = "int"
popup/item_2/id = 2
popup/item_3/text = "float"
popup/item_3/id = 3
popup/item_4/text = "String"
popup/item_4/id = 5
popup/item_5/text = "Array"
popup/item_5/id = 6
popup/item_6/text = "Dictionary"
popup/item_6/id = 6
popup/item_7/text = "Object"
popup/item_7/id = 7
popup/item_8/text = "Vector3"
popup/item_8/id = 8
popup/item_9/text = "NormalVector3"
popup/item_9/id = 9

[node name="Connect" type="Button" parent="."]
layout_mode = 2
text = ">"

[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
[connection signal="item_selected" from="TypeSelection" to="." method="_on_type_selection_item_selected"]
[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
